[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = "1.0.214"
serde_json = "1.0.132"
sqlx = {version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"]}
tokio = "1.41.0"
